Fix license page alignment

--- a/assets/admin/menu-pages/add-ons/src/components/Extension.scss
+++ b/assets/admin/menu-pages/add-ons/src/components/Extension.scss
@@ -1,5 +1,5 @@
 .extension {
-    padding: 15px;
+    padding: 15px 15px 15px 25px;
     margin: 0;
     background: #fff;
     border-bottom: 1px solid #eee;
@@ -22,6 +22,10 @@
     }
     
     @media(min-width: 768px) {
+        & {
+            padding: 15px;
+        }
+
         .thumbnail, .info, .actions {
             display: inline-block;
         }   
