--- a/assets/admin/menu-pages/add-ons/src/components/ExtensionList.scss
+++ b/assets/admin/menu-pages/add-ons/src/components/ExtensionList.scss
@@ -1,13 +1,7 @@
 .extensions {
-    padding-left: 20px;
     border-top: 1px solid #eee;
-
-    .extension {
-        margin-left: -10px;
-    }
 
     .draft:first-child {
         margin-top: 15px;
     }
-
 }
